// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> <Loading> show when loading is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="loading"
      >
        Loading...
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="loading"
    >
      Loading...
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<List> <NoData> change component text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="noData"
      >
        <p
          class="para"
        >
          Mock no data
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="noData"
    >
      <p
        class="para"
      >
        Mock no data
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<List> <noData> component will not show with atleast one item length 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="height: 100%; outline: none; overflow-y: auto; position: relative;"
        tabindex="0"
      >
        <div
          style="width: 100%; height: 100%; position: absolute; top: 0px;"
        >
          <div
            style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
          >
            <div
              data-index="0"
              data-item-index="0"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="1"
              data-item-index="1"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="2"
              data-item-index="2"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="3"
              data-item-index="3"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="4"
              data-item-index="4"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="5"
              data-item-index="5"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="6"
              data-item-index="6"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="7"
              data-item-index="7"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="8"
              data-item-index="8"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="9"
              data-item-index="9"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="height: 100%; outline: none; overflow-y: auto; position: relative;"
      tabindex="0"
    >
      <div
        style="width: 100%; height: 100%; position: absolute; top: 0px;"
      >
        <div
          style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
        >
          <div
            data-index="0"
            data-item-index="0"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="1"
            data-item-index="1"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="2"
            data-item-index="2"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="3"
            data-item-index="3"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="4"
            data-item-index="4"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="5"
            data-item-index="5"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="6"
            data-item-index="6"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="7"
            data-item-index="7"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="8"
            data-item-index="8"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="9"
            data-item-index="9"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<List> <noData> show text without noData prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="noData"
      >
        <p
          class="para"
        >
          :) No Radio Station available
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="noData"
    >
      <p
        class="para"
      >
        :) No Radio Station available
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<List> render List component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="height: 100%; outline: none; overflow-y: auto; position: relative;"
        tabindex="0"
      >
        <div
          style="width: 100%; height: 100%; position: absolute; top: 0px;"
        >
          <div
            style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
          >
            <div
              data-index="0"
              data-item-index="0"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="1"
              data-item-index="1"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="2"
              data-item-index="2"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="3"
              data-item-index="3"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="4"
              data-item-index="4"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="5"
              data-item-index="5"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="6"
              data-item-index="6"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="7"
              data-item-index="7"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="8"
              data-item-index="8"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
            <div
              data-index="9"
              data-item-index="9"
              data-known-size="0"
            >
              <div>
                hello
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="height: 100%; outline: none; overflow-y: auto; position: relative;"
      tabindex="0"
    >
      <div
        style="width: 100%; height: 100%; position: absolute; top: 0px;"
      >
        <div
          style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
        >
          <div
            data-index="0"
            data-item-index="0"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="1"
            data-item-index="1"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="2"
            data-item-index="2"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="3"
            data-item-index="3"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="4"
            data-item-index="4"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="5"
            data-item-index="5"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="6"
            data-item-index="6"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="7"
            data-item-index="7"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="8"
            data-item-index="8"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
          <div
            data-index="9"
            data-item-index="9"
            data-known-size="0"
          >
            <div>
              hello
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
